2008-05-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx, src/pipeline.cxx:
  - Fixes for Sun Studio, thanks jgilje.
2008-05-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Fixed bug in replacing GNU-ism in sed.
2008-05-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Removed some GNU-isms.
 configure.ac.in, src/util.cxx, test/test_helpers.hxx,
 test/unit/test_float.cxx:
  - Support floating-point infinity.
  - Added PQXX_CHEC_NOT_EQUAL to test helpers.
  - Fixed mis-spelled macro in is_NaN()
 include/pqxx/compiler-public.hxx:
  - Defined PQXX_PRIVATE for SunPro compiler.
 include/pqxx/util.hxx, src/util.cxx:
  - Moved builtin to_string and from_string specializations into traits class.
2008-05-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/prepared_statement.hxx, include/pqxx/result.hxx,
 include/pqxx/util.hxx:
  - Handle nulls in string conversions using traits, thanks Daniel Frey
 src/util.cxx:
  - Use numeric_limits to get infinity, if possible.  Thanks Andrew.
2008-05-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-public.hxx, include/pqxx/connection_base.hxx,
 include/pqxx/dbtransaction.hxx, include/pqxx/except.hxx,
 include/pqxx/notify-listen.hxx, include/pqxx/robusttransaction.hxx,
 include/pqxx/tablestream.hxx, include/pqxx/transaction_base.hxx:
  - Suppress vtables for abstract classes on Visual C++, thanks Kirit.
2008-05-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transaction_base.hxx, src/connection_base.cxx, src/pipeline.cxx:
  - Check for errors during PQconsumeInput()
  - Fixed "endless network timeout."  Thanks Dragomir Ivanov!
  - transaction_base::consume_input() now returns success value.
2008-05-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
  - Changed fix for Visual C++ warning (was bad overload).
2008-05-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, src/connection_base.cxx, src/pipeline.cxx,
 src/prepared_statement.cxx, src/util.cxx: