@@ -874,6 +874,17 @@ AC_TRY_COMPILE([#include <string>
 	[string_clear=no])
 AC_MSG_RESULT($string_clear)
 
+AC_MSG_CHECKING([for standard distance()])
+distance=yes
+AC_TRY_COMPILE([#include <iterator>
+	${usestd}],
+	[int i[1]; return distance(i, i+1)],
+	[AC_DEFINE(PQXX_HAVE_DISTANCE,
+		1,
+		[Define if distance() works according to the standard])],
+	[distance='no'])
+AC_MSG_RESULT($distance)
+
 AC_MSG_CHECKING([if count_if() works as expected])
 count_if='yes'
 AC_TRY_COMPILE([#include <algorithm>
